// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlatformActions Should return a dispatch object for the hideGlobalFilter method: dispatch object 1`] = `
{
  "payload": Promise {},
  "type": "PLATFORM_GLOBAL_FILTER_HIDE",
}
`;

exports[`PlatformActions Should return response content for createExport method: dispatch object 1`] = `
[
  [
    {
      "meta": {
        "id": undefined,
        "notifications": {
          "pending": {
            "dismissable": true,
            "id": "swatch-create-export-undefined",
            "title": "t(curiosity-toolbar.notifications_export_pending, {"context":"title"})",
            "variant": "info",
          },
          "rejected": {
            "description": "t(curiosity-toolbar.notifications_export_error, {"context":"description"})",
            "dismissable": true,
            "title": "t(curiosity-toolbar.notifications_export_error, {"context":"title"})",
            "variant": "warning",
          },
        },
      },
      "payload": Promise {},
      "type": "SET_PLATFORM_EXPORT_CREATE",
    },
  ],
]
`;

exports[`PlatformActions Should return response content for getExistingExports method: dispatch object 1`] = `
[
  [
    {
      "meta": {
        "notifications": {
          "fulfilled": {
            "description": "t(curiosity-toolbar.notifications_export_completed, {"context":"descriptionGlobal","count":0})",
            "dismissable": true,
            "title": "t(curiosity-toolbar.notifications_export_completed, {"context":"titleGlobal","count":0})",
            "variant": "success",
          },
          "pending": {
            "dismissable": true,
            "title": "t(curiosity-toolbar.notifications_export_pending, {"context":"titleGlobal"})",
            "variant": "info",
          },
          "rejected": {
            "description": "t(curiosity-toolbar.notifications_export_error, {"context":"description"})",
            "dismissable": true,
            "title": "t(curiosity-toolbar.notifications_export_error, {"context":"title"})",
            "variant": "warning",
          },
        },
      },
      "payload": Promise {},
      "type": "GET_PLATFORM_EXPORT_EXISTING",
    },
  ],
]
`;

exports[`PlatformActions Should return response content for getExistingExportsStatus method: dispatch object 1`] = `
[
  [
    {
      "meta": {
        "notifications": {
          "rejected": {
            "description": "t(curiosity-toolbar.notifications_export_error, {"context":"description"})",
            "dismissable": true,
            "title": "t(curiosity-toolbar.notifications_export_error, {"context":"title"})",
            "variant": "warning",
          },
        },
      },
      "payload": Promise {},
      "type": "SET_PLATFORM_EXPORT_EXISTING_STATUS",
    },
  ],
]
`;

exports[`PlatformActions Should return response content for removeExistingExports method: dispatch object 1`] = `
[
  [
    {
      "meta": {
        "notifications": {
          "rejected": {
            "description": "t(curiosity-toolbar.notifications_export_error, {"context":"description"})",
            "dismissable": true,
            "title": "t(curiosity-toolbar.notifications_export_error, {"context":"title"})",
            "variant": "warning",
          },
        },
      },
      "payload": Promise {},
      "type": "DELETE_PLATFORM_EXPORT_EXISTING",
    },
  ],
]
`;
